# quant-factory-v3

./: .gitignore  AGENTS.md  GRADUATION_LEDGER.md  LAB_REGISTRY.md  PORTFOLIO_CURRENT.md  PROTOCOL_CURRENT.md  README.md  pyproject.toml
benchmarks/: AGENTS.md
benchmarks/active/: source_grounding_v0.json  text_judgment_v0.json  visual_deictic_v0.json
benchmarks/future_candidates/: formula_missing_v0.md  judgment_artifact_seed_v0.md
docs/: AGENTS.md  experiment-question-template.md  future-blockers-and-mitigations.md  live-llm-experiment-admission.md  llm-experimentation-model.md  project-thesis.md  research-lifecycle.md  v2-benchmark-memory.md
docs/adr/: 0001-allow-proposal-only-live-pilot-records.md  0002-add-manual-content-review-evaluator.md  0003-graduate-line-range-first-locator-workflow.md
docs/agent-checklists/: live-pilot-packet-template.md  new-experiment-checklist.md  stale-direction-cleanup-checklist.md
docs/build-prompts/: scaffold-milestone-one.md
docs/research-plans/: autonomous-lab-loop.md  llm-judge-calibration-study.md  recursive-contextual-meaning-loop.md
labs/: AGENTS.md
labs/chunked_source_grounding/: LAB_CARD.md  README.md  RESEARCH_QUESTION.md
labs/llm_judge_calibration/: LAB_CARD.md  README.md  RESEARCH_QUESTION.md
labs/long_context_judgment/: LAB_CARD.md  README.md  RESEARCH_QUESTION.md
labs/visual_deictic_understanding/: LAB_CARD.md  README.md  RESEARCH_QUESTION.md
raw_corpora/: README.md
tests/: test_boundary_contracts.py  test_repo_governance_contracts.py  test_scaffold_contracts.py
(+186 files in other folders)
